tests/ui/type-alias-impl-trait/impl_trait_for_tait_bound.stderr
error[E0277]: the trait bound `u32: Yay` is not satisfied
  --> $DIR/impl_trait_for_tait_bound.rs:11:14
   |
LL |     is_yay::<u32>();
   |              ^^^ the trait `Yay` is not implemented for `u32`
   |
   = help: the trait `Yay` is implemented for `Foo`
note: required by a bound in `is_yay`
  --> $DIR/impl_trait_for_tait_bound.rs:17:14
   |
LL | fn is_yay<T: Yay>() {}
   |              ^^^ required by this bound in `is_yay`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
